--- a/SalesWebMvc/Views/Home/About.cshtml
+++ b/SalesWebMvc/Views/Home/About.cshtml
@@ -4,4 +4,10 @@
 <h2>@ViewData["Title"]</h2>
 <h3>@ViewData["Message"]</h3>
 
-<p>Use this area to provide additional information.</p>
+
+<p>Developed by: @ViewData["Developer"]</p>
+<adress>
+    <p>Contact: @ViewData["email"] // <a href="https://github.com/LuccaMenegatti" target="_blank">GitHub</a></p>
+    
+</adress>
+
